// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > variant 'danger' — matches snapshot 1`] = `
<div
  aria-labelledby="_r_l_"
  aria-modal="false"
  class="flex w-[285px] max-w-[calc(100vw-2rem)] items-center gap-3 rounded-3xl border py-3 pl-3 pr-8 bg-pca-red-300 border-pca-red-900 animate-toast-slide-in data-ending-style:animate-toast-slide-out motion-reduce:animate-none"
  data-type="danger"
  role="dialog"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: -1; --toast-offset-y: 0px;"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="shrink-0 text-pca-red-900"
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 8V12M12 16H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <h2
    class="antialiased font-inter text-sm text-pca-red-900 dark:text-pca-red-900 text-center font-semibold grow break-words"
    data-type="danger"
    id="_r_l_"
  >
    Something happened
  </h2>
</div>
`;

exports[`Toast > variant 'info' — matches snapshot 1`] = `
<div
  aria-labelledby="_r_f_"
  aria-modal="false"
  class="flex w-[285px] max-w-[calc(100vw-2rem)] items-center gap-3 rounded-3xl border py-3 pl-3 pr-8 bg-pca-blue-300 border-pca-blue-900 animate-toast-slide-in data-ending-style:animate-toast-slide-out motion-reduce:animate-none"
  data-type="info"
  role="dialog"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: -1; --toast-offset-y: 0px;"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="shrink-0 text-pca-blue-900"
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <h2
    class="antialiased font-inter text-sm text-pca-blue-900 dark:text-pca-blue-900 text-center font-semibold grow break-words"
    data-type="info"
    id="_r_f_"
  >
    Something happened
  </h2>
</div>
`;

exports[`Toast > variant 'success' — matches snapshot 1`] = `
<div
  aria-labelledby="_r_h_"
  aria-modal="false"
  class="flex w-[285px] max-w-[calc(100vw-2rem)] items-center gap-3 rounded-3xl border py-3 pl-3 pr-8 bg-pca-green-300 border-pca-green-900 animate-toast-slide-in data-ending-style:animate-toast-slide-out motion-reduce:animate-none"
  data-type="success"
  role="dialog"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: -1; --toast-offset-y: 0px;"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="shrink-0 text-pca-green-900"
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <h2
    class="antialiased font-inter text-sm text-pca-green-900 dark:text-pca-green-900 text-center font-semibold grow break-words"
    data-type="success"
    id="_r_h_"
  >
    Something happened
  </h2>
</div>
`;

exports[`Toast > variant 'warning' — matches snapshot 1`] = `
<div
  aria-labelledby="_r_j_"
  aria-modal="false"
  class="flex w-[285px] max-w-[calc(100vw-2rem)] items-center gap-3 rounded-3xl border py-3 pl-3 pr-8 bg-pca-orange-300 border-pca-orange-900 animate-toast-slide-in data-ending-style:animate-toast-slide-out motion-reduce:animate-none"
  data-type="warning"
  role="dialog"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: -1; --toast-offset-y: 0px;"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="shrink-0 text-pca-orange-900"
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.9998 8.99999V13M11.9998 17H12.0098M10.6151 3.89171L2.39019 18.0983C1.93398 18.8863 1.70588 19.2803 1.73959 19.6037C1.769 19.8857 1.91677 20.142 2.14613 20.3088C2.40908 20.5 2.86435 20.5 3.77487 20.5H20.2246C21.1352 20.5 21.5904 20.5 21.8534 20.3088C22.0827 20.142 22.2305 19.8857 22.2599 19.6037C22.2936 19.2803 22.0655 18.8863 21.6093 18.0983L13.3844 3.89171C12.9299 3.10654 12.7026 2.71396 12.4061 2.58211C12.1474 2.4671 11.8521 2.4671 11.5935 2.58211C11.2969 2.71396 11.0696 3.10655 10.6151 3.89171Z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <h2
    class="antialiased font-inter text-sm text-pca-orange-900 dark:text-pca-orange-900 text-center font-semibold grow break-words"
    data-type="warning"
    id="_r_j_"
  >
    Something happened
  </h2>
</div>
`;
